--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,11 +677,166 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Пример. Подписки\n",
+    "#### Stripe позволяет подписывать пользователей на различные продукты по различным планам на различные периоды.\n",
+    "#### Для создания подписки, в первую очередь нужно создать продукт, на который будем подписывать. Продукты могут быть двух типов: товары и сервисы. При создании продукта в параметре type указываем service:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "product = stripe.Product.create(\n",
+    "  name='My SaaS Platform',\n",
+    "  type='service',\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Далее для продукта создаем план подписки, их может быть сколько угодно:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plan = stripe.Plan.create(\n",
+    "  product=product.id,\n",
+    "  nickname='SaaS Platform USD',\n",
+    "  interval='month',\n",
+    "  currency='usd',\n",
+    "  amount=10000,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Для хранение информации о клиенте также необходимо создать объект Customer, который может хранить всю данные клиента, его способах оплаты, првязанных картах."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer = stripe.Customer.create(\n",
+    "  email='jenny.rosen@example.com',\n",
+    "  source='tok_visa',\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### При создании Customer можно указать явно параметр source. Это может быть либо токен карты, полученный с клиента, в таком случае указанная карта будет способом оплаты по умолчанию. Либо можно создать и передать отдельный объект Source, который может принимать любые другие доступные способы оплаты."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Source source id=src_1D06ycFaIPBmVHYvYMLsZ120 at 0x10e51ce60> JSON: {\n",
+       "  \"ach_credit_transfer\": {\n",
+       "    \"account_number\": \"test_3d07118a8b41\",\n",
+       "    \"bank_name\": \"TEST BANK\",\n",
+       "    \"fingerprint\": \"mZi7XCc3tXa5H7ZU\",\n",
+       "    \"routing_number\": \"110000000\",\n",
+       "    \"swift_code\": \"TSTEZ122\"\n",
+       "  },\n",
+       "  \"amount\": null,\n",
+       "  \"client_secret\": \"src_client_secret_DQywVSIcRibeaWTrLrib6nDk\",\n",
+       "  \"created\": 1534508570,\n",
+       "  \"currency\": \"usd\",\n",
+       "  \"flow\": \"receiver\",\n",
+       "  \"id\": \"src_1D06ycFaIPBmVHYvYMLsZ120\",\n",
+       "  \"livemode\": false,\n",
+       "  \"metadata\": {},\n",
+       "  \"object\": \"source\",\n",
+       "  \"owner\": {\n",
+       "    \"address\": null,\n",
+       "    \"email\": \"jenny.rosen@example.com\",\n",
+       "    \"name\": null,\n",
+       "    \"phone\": null,\n",
+       "    \"verified_address\": null,\n",
+       "    \"verified_email\": null,\n",
+       "    \"verified_name\": null,\n",
+       "    \"verified_phone\": null\n",
+       "  },\n",
+       "  \"receiver\": {\n",
+       "    \"address\": \"110000000-test_3d07118a8b41\",\n",
+       "    \"amount_charged\": 0,\n",
+       "    \"amount_received\": 0,\n",
+       "    \"amount_returned\": 0,\n",
+       "    \"refund_attributes_method\": \"email\",\n",
+       "    \"refund_attributes_status\": \"missing\"\n",
+       "  },\n",
+       "  \"statement_descriptor\": null,\n",
+       "  \"status\": \"pending\",\n",
+       "  \"type\": \"ach_credit_transfer\",\n",
+       "  \"usage\": \"reusable\"\n",
+       "}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stripe.Source.create(\n",
+    "  type='ach_credit_transfer',\n",
+    "  currency='usd',\n",
+    "  owner={\n",
+    "    'email': 'jenny.rosen@example.com'\n",
+    "  }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Далее мы можем подписать клиента на наш план подписки, создав объект Subcription:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subscription = stripe.Subscription.create(\n",
+    "  customer=customer.id,\n",
+    "  items=[{'plan': plan.id}],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Когда наступит время оплаты, Stripe будет создаст объект Invoice. В зависимости от настроек аккаунта сумма может списываться автоматически, либо посредством выставления счета и отправки email.\n",
+    "#### Также Stripe предоставляет механизм webhooks, который позволяет своевременно уведомлять клиента и продавца о различных событиях. Чаще всего webhooks использутся для обработки неудачных случаев при автоматическом списывании, отслеживания активных подписок, отслеживания изменений в состоянии и условий подписок.\n",
+    "#### Создать и настроить webhooks можно в дашборде Stripe. https://dashboard.stripe.com/account/webhooks. Необходимо указать тип события и эндпоинт, который "
+   ]
   }
  ],
  "metadata": {
