add errors and problems

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,6 +837,111 @@
     "#### Также Stripe предоставляет механизм webhooks, который позволяет своевременно уведомлять клиента и продавца о различных событиях. Чаще всего webhooks использутся для обработки неудачных случаев при автоматическом списывании, отслеживания активных подписок, отслеживания изменений в состоянии и условий подписок.\n",
     "#### Создать и настроить webhooks можно в дашборде Stripe. https://dashboard.stripe.com/account/webhooks. Необходимо указать тип события и эндпоинт, который "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ошибки и решения.\n",
+    "### Ошибки при оптлатах.\n",
+    "#### Ошибки при оплатах могут возникать по разным причинам, и важно правильно реагировать и обрабатывать их, потому что это ведет к потере доходов для бизнеса. При неудачной попытке опталы stripe возвращает исключение CardError, который в теле содержит decline code, по которому можно определить причину ошибки. Список decline code доступен здесь: https://stripe.com/docs/declines/codes\n",
+    "#### Например если данные карты были украдены мошенником и он пробует с нее оплатить, stripe может посчитать карту краденой и вернуть код fraudulent."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'charge': 'ch_1D17MhFaIPBmVHYvg9j56m3M', 'code': 'card_declined', 'decline_code': 'fraudulent', 'doc_url': 'https://stripe.com/docs/error-codes/card-declined', 'message': 'Your card was declined.', 'type': 'card_error'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    charge = stripe.Charge.create(\n",
+    "      amount=999,\n",
+    "      currency='usd',\n",
+    "      source='tok_chargeDeclinedFraudulent', # токен краденой карты\n",
+    "      receipt_email='jenny.rosen@example.com',\n",
+    "    )\n",
+    "except stripe.error.CardError as e:\n",
+    "    print(e.json_body.get('error'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### При неудачной попытке опталы также создается объект Charge, у этого объекта есть свойство outcome. Для более подробной информации можно вызвать его"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<StripeObject at 0x1107a1ca8> JSON: {\n",
+       "  \"network_status\": \"not_sent_to_network\",\n",
+       "  \"reason\": \"merchant_blacklist\",\n",
+       "  \"risk_level\": \"highest\",\n",
+       "  \"seller_message\": \"Stripe blocked this payment.\",\n",
+       "  \"type\": \"blocked\"\n",
+       "}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stripe.Charge.retrieve('ch_1D17MhFaIPBmVHYvg9j56m3M').outcome"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Информация о том что карта крадена не должна возвращаться покупателю. Вместо этого рекумендуентся возвращать более общую ошибку, о том что карта отклонена. А также использованть webhooks для своевременоого информирования продавца."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Советы по безопасности\n",
+    "#### Stripe сертифицирован на соотвествие стандартам PCI DSS (Payment Card Industry Data Security Standards) и имеет сертификат первого уровня (самый строгий из возможных). Это также накладывает ограничения на бизнес клиента, который использует страйп. Сервис приема платежей также должен соответствовать этим стандартам. Для этого нужно соблюдение следующих условий:\n",
+    "#### 1. Использовать нативные инструменты Stripe (Checkout, Stripe js, Elements, mobile SDK), не производить вручную обработку платежных данных через свой сервер\n",
+    "#### 2. Использовать TLS и HTTPS на сервере\n",
+    "#### 3. Ежегодно производить проверку проверку аккаунта на соотвествие стандартам PCI\n",
+    "\n",
+    "#### В противном случае аккаунт Stripe может быть заблокирован"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Общие проблемы\n",
+    "#### При оплатах в Stripe чаще чем в аналогах используются краденные карты, система отслеживания все еще работает не так хорошо\n",
+    "#### Частые проблемы с блокировкой аккаунтов, обычно у стартапов и маленьких магазинов. Stripe больше подходит для среднего и крупного бизнеса.\n",
+    "#### Запрещены некоторые виды бизнеса, например продажа фармацевтических товаров"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
